# tesi_watermarking

./: .gitignore  .gitignore~  CMakeLists.txt  README.md
config/: config.cfg
src/: main.cpp  utils.cpp  utils.h
src/DFTwatermarking/: frequencyWatermarking.cpp  frequencyWatermarking.h
src/FDTwatermarking/: frequencyWatermarking.cpp  frequencyWatermarking.h
src/config/: config.cpp  config.hpp
src/dataset/: msm_middlebury.cpp  tsukuba_dataset.cpp
src/disparity_computation/: sift_computation.cpp  sift_computation.h  stereo_matching.cpp  stereo_matching.h
src/disparity_optimization/: disp_opt.cpp  disp_opt.h  occlusions_handler.cpp  occlusions_handler.h
src/graphUtils/: GraphUtils.cpp
src/graphcuts/: image.cpp  image.h  io_png.c  io_png.h  match.cpp  utils.cpp  utils.h
src/graphcuts/libMatch/: CMakeLists.txt  libmatch.cpp  libmatch.h
src/graphcuts/libOrsa/: CMakeLists.txt  conditioning.cpp  conditioning.hpp  fundamental_model.cpp  orsa.cpp  orsa.h  orsa_model.cpp
src/graphcuts/sift/: demo_lib_sift.cpp  demo_lib_sift.h
src/img_watermarking/: allocim.cpp  allocim.h  bch.cpp  bch.h  fft2d.cpp  fft2d.h  imgwat.cpp  imgwat.h  watermarking.cpp  watermarking.h
src/quality_metrics/: RRQualityMetrics.cpp  RRQualityMetrics.h  quality_metrics.cpp  quality_metrics.h
src/rectify/: CMakeLists.txt  main.cpp  rectmain.cpp
src/rectify/doc/: userguide.tex
src/rectify/src/: CMakeLists.txt
src/rectify/src/libIO/: CMakeLists.txt
src/rectify/src/libMatch/: CMakeLists.txt  imgmatch.cpp  imgmatch.h
src/rectify/src/libNumerics/: CMakeLists.txt
src/rectify/src/libOrsa/: fundamental_model.cpp  fundamental_model.hpp  main.cpp  orsa.cpp  orsa.h  orsa_model.hpp
src/rectify/src/libRectification/: CMakeLists.txt  main.cpp  rectify.cpp  rectify.h
src/rectify/src/libTransform/: CMakeLists.txt  gauss_convol.cpp  map_image.cpp  map_image.h
src/rectify/src/rectify/: CMakeLists.txt  main.cpp  rectify.h
src/rectify/src/sift/: CMakeLists.txt  demo_lib_sift.cpp  demo_lib_sift.h  demo_sift.cpp
src/rectify/src/siftMatch/: demo_lib_sift.cpp  demo_lib_sift.h  demo_sift.cpp
src/rectify/src/warp/: CMakeLists.txt  warp.cpp
src/right_view_computation/: right_view.cpp  right_view.h
src/roc/: roc.cpp  roc.h
src/spatialWatermarking/: gaussianNoise.cpp  gaussianNoise.h
