CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(UNIX)
    SET(BUILD_SHARED_LIBS OFF CACHE BOOL "Dynamic libraries")
ENDIF(UNIX)

SET(BASE_DIR_SRC ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "Base src dir")
SET(BASE_DIR_BIN ${CMAKE_CURRENT_BINARY_DIR} CACHE INTERNAL "Base bin dir")

# Use the local libraries and do not check the system libaries
SET(WITH_INCLUDED_ZLIB OFF CACHE BOOL "Use local zlib")
SET(WITH_INCLUDED_LIBPNG OFF CACHE BOOL "Use local libpng")
SET(WITH_INCLUDED_LIBJPEG OFF CACHE BOOL "Use local libjpeg")
SET(WITH_INCLUDED_LIBTIFF OFF CACHE BOOL "Use local libtiff")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(./src/libMatch)
ADD_SUBDIRECTORY(./src/libNumerics)
ADD_SUBDIRECTORY(./src/libTransform)
ADD_SUBDIRECTORY(./src/libIO)
ADD_SUBDIRECTORY(./src/libOrsa)
ADD_SUBDIRECTORY(./src/rectify)
ADD_SUBDIRECTORY(./src/sift)
ADD_SUBDIRECTORY(./src/warp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
TARGET_LINK_LIBRARIES(rectifyQuasiEuclidean Transform Rectification Orsa SIFT
                      Match Numerics IO ${IO_LIBRARIES})

IF(UNIX)
    SET_TARGET_PROPERTIES(rectifyQuasiEuclidean PROPERTIES
                          COMPILE_FLAGS "-std=c++98 -Wall -Wextra -Werror")
ENDIF(UNIX)

