SET(SRC io_png.c io_png.h
        io_tiff.c io_tiff.h
        cmdLine.h
        nan.h)

ADD_LIBRARY(IO ${SRC})

IF(NOT WITH_INCLUDED_LIBPNG)
    FIND_PACKAGE(PNG)
ENDIF(NOT WITH_INCLUDED_LIBPNG)

IF(NOT PNG_FOUND)
    IF(NOT WITH_INCLUDED_ZLIB)
      FIND_PACKAGE(ZLIB)
    ENDIF(NOT WITH_INCLUDED_ZLIB)
    IF(NOT ZLIB_FOUND)
      ADD_SUBDIRECTORY(${BASE_DIR_SRC}/third_party/zlib-1.2.8
                       ${BASE_DIR_BIN}/third_party/zlib-1.2.8)
    ENDIF(NOT ZLIB_FOUND)
    INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})    

    ADD_SUBDIRECTORY(${BASE_DIR_SRC}/third_party/libpng-1.6.12
                     ${BASE_DIR_BIN}/third_party/libpng-1.6.12)
ENDIF(NOT PNG_FOUND)
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIRS})
ADD_DEFINITIONS(${PNG_DEFINITIONS})

IF(NOT WITH_INCLUDED_LIBTIFF)
    FIND_PACKAGE(TIFF)
ENDIF(NOT WITH_INCLUDED_LIBTIFF)

IF(NOT TIFF_FOUND)
    IF(NOT WITH_INCLUDED_LIBJPEG)
      FIND_PACKAGE(JPEG)
    ENDIF(NOT WITH_INCLUDED_LIBJPEG)
    IF(NOT JPEG_FOUND)
      ADD_SUBDIRECTORY(${BASE_DIR_SRC}/third_party/jpeg-9a
                       ${BASE_DIR_BIN}/third_party/jpeg-9a)
    ENDIF(NOT JPEG_FOUND)
    INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR})

    ADD_SUBDIRECTORY(${BASE_DIR_SRC}/third_party/tiff-4.0.3
                     ${BASE_DIR_BIN}/third_party/tiff-4.0.3)
ENDIF(NOT TIFF_FOUND)
INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})

INCLUDE_DIRECTORIES(..)

TARGET_LINK_LIBRARIES(IO ${TIFF_LIBRARIES} ${PNG_LIBRARIES})
SET(IO_LIBRARIES ${TIFF_LIBRARIES} ${PNG_LIBRARIES} CACHE INTERNAL "libIO")

IF(UNIX)
    SET_TARGET_PROPERTIES(IO PROPERTIES
                          COMPILE_FLAGS "-std=c89 -Wall -Wextra -Werror")
ENDIF(UNIX)
